maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:8: error: (Int, Int) does not take parameters
  while(Coord(sol)!=()){
             ^ShortestPathMaze:9: error: (Int, Int) does not take parameters
    for (i <- 0 to Coord(sol).size-1){
                        ^ShortestPathMaze:10: error: value update is not a member of (Int, Int)
      Coord(sol+1)=Coord(sol+1)+marquage(Coord(sol)(0),Coord(sol)(1),sol)
      ^ShortestPathMaze:10: error: (Int, Int) does not take parameters
      Coord(sol+1)=Coord(sol+1)+marquage(Coord(sol)(0),Coord(sol)(1),sol)
                        ^ShortestPathMaze:30: error: type List takes type parameters
def marquage(x:Int,y:Int,sol:Int):List ={
                                  ^ShortestPathMaze:10: error: (Int, Int) does not take parameters
      Coord(sol+1)=Coord(sol+1)+marquage(Coord(sol)(0),Coord(sol)(1),sol)
                                              ^ShortestPathMaze:10: error: (Int, Int) does not take parameters
      Coord(sol+1)=Coord(sol+1)+marquage(Coord(sol)(0),Coord(sol)(1),sol)
                                                            ^ShortestPathMaze:11: error: value update is not a member of (Int, Int)
      Coord(sol)=Coord(sol).tail()
      ^ShortestPathMaze:11: error: (Int, Int) does not take parameters
      Coord(sol)=Coord(sol).tail()
                      ^ShortestPathMaze:12: error: value update is not a member of (Int, Int)
      Coord(sol)=Coord(sol).tail()
      ^ShortestPathMaze:12: error: (Int, Int) does not take parameters
      Coord(sol)=Coord(sol).tail()
                      ^ShortestPathMaze:30: error: type List takes type parameters
def marquage(x:Int,y:Int,sol:Int):List ={
                                  ^ShortestPathMaze:35: error: type mismatch;
 found   : List[Int]
 required: String
      L=L+List(x,y-1)
              ^ShortestPathMaze:41: error: type mismatch;
 found   : List[Int]
 required: String
      L=L+List(x-1,y)
              ^ShortestPathMaze:47: error: type mismatch;
 found   : List[Int]
 required: String
      L=L+List(x+1,y)
              ^ShortestPathMaze:53: error: type mismatch;
 found   : List[Int]
 required: String
      L=L+List(x,y+1)
              ^